...
  String get rolloutStateSendingPublicKeyCompleted => 'Senden des öffentlichen Schlüssels abgeschlossen';

  @override
  String get rolloutStateSendingPublicKeyFailed => 'Sending public key failed';

  @override
  String get saveButton => 'Save';

  @override
  String get scanQrCode => 'Scan QR-Code';

  @override
  String get scanThisQrWithNewDevice => 'Scan this QR code with your new device to import the token.';
...
